atualiza imagem login para todas paginas

--- a/cardExpandido.html
+++ b/cardExpandido.html
@@ -40,7 +40,7 @@
 
         <!----------------titulos conteudo------------- -->
         <div class="container-content">
-             <!-- -------------header------------- -->
+            <!-- -------------header------------- -->
             <header>
                 <div class="header">
                     <div class="title">
@@ -50,7 +50,18 @@
                     </div>
                     <div class="elements">
                         <div class="lang-btn"><img src="./images/botão - idiomas.png" alt=""></div>
-                        <div class="login"><img src="./images/login.png" alt=""></div>
+                        <div class="login">
+                            <div class="login-infos">
+                                <p class="saudacao">Bem vindo!</p>
+                                <p class="email">alguem12@galoascience.com</p>
+                            </div>
+                            <div class="foto-container">
+                                <div class="foto-notific"> <strong>2</strong> </div>
+                                <div class="foto">
+                                    <img src="./images/image.png" alt="foto login">
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
@@ -131,9 +142,9 @@
                     </div>
                     <div class="division">
                         <hr>
-                                <a href="./novoTopico.html">
-                                    <button> <img src="./images/icon - criar.png" alt="">criar tópico</button>    
-                                </a>
+                        <a href="./novoTopico.html">
+                            <button> <img src="./images/icon - criar.png" alt="">criar tópico</button>
+                        </a>
                     </div>
                     <div class="cards">
                         <div class="card-1">
