--- a/topicoEnviado.html
+++ b/topicoEnviado.html
@@ -50,7 +50,18 @@
                     </div>
                     <div class="elements">
                         <div class="lang-btn"><img src="./images/botão - idiomas.png" alt=""></div>
-                        <div class="login"><img src="./images/login.png" alt=""></div>
+                        <div class="login">
+                            <div class="login-infos">
+                                <p class="saudacao">Bem vindo!</p>
+                                <p class="email">alguem12@galoascience.com</p>
+                            </div>
+                            <div class="foto-container">
+                                <div class="foto-notific"> <strong>2</strong> </div>
+                                <div class="foto">
+                                    <img src="./images/image.png" alt="foto login">
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
